Alterações no BG

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="hero"></section>
+    <h1 class="hero-title">Matheus Munhoz</h1>
+    <p class="hero-sub">Front-End Developer</p>
     <script src="script.js"></script>
   </body>
 </html>
