implementação dos meus projetos

--- a/index.html
+++ b/index.html
@@ -7,8 +7,89 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1 class="title">Matheus Munhoz</h1>
-    <p class="sub">Front-End Developer</p>
+    <section class="header">
+      <h1 class="title">Matheus Munhoz</h1>
+      <p class="sub">Front-End Developer</p>
+   <section class="works" id="projetos">
+  <div class="works__header">
+    <h2 class="works__title">Meus Projetos</h2>
+    <p class="works__subtitle">Alguns projetos que eu construí para praticar e mostrar minhas habilidades.</p>
+  </div>
+
+  <div class="projects-grid">
+    <article class="project-card">
+      <div class="project-thumb">
+        <img src="img/projeto-1.jpg" alt="Preview do projeto 1" />
+      </div>
+
+      <div class="project-body">
+        <h3 class="project-title">Landing Page Agency</h3>
+        <p class="project-desc">
+          Landing page responsiva com animações suaves, foco em performance e acessibilidade.
+        </p>
+
+        <div class="project-tags">
+          <span class="tag">HTML</span>
+          <span class="tag">CSS</span>
+          <span class="tag">JS</span>
+        </div>
+
+        <div class="project-actions">
+        
+          <a class="btn btn--ghost" href="#" target="_blank" rel="noreferrer">GitHub</a>
+        </div>
+      </div>
+    </article>
+
+    <article class="project-card">
+      <div class="project-thumb">
+        <img src="img/projeto-2.jpg" alt="Preview do projeto 2" />
+      </div>
+
+      <div class="project-body">
+        <h3 class="project-title">Blog com Django</h3>
+        <p class="project-desc">
+          Blog com autenticação, CRUD de posts, painel administrativo e layout responsivo.
+        </p>
+
+        <div class="project-tags">
+          <span class="tag">Django</span>
+          <span class="tag">Python</span>
+          <span class="tag">PostgreSQL</span>
+        </div>
+
+        <div class="project-actions">
+          
+          <a class="btn btn--ghost" href="#" target="_blank" rel="noreferrer">GitHub</a>
+        </div>
+      </div>
+    </article>
+
+    <article class="project-card">
+      <div class="project-thumb">
+        <img src="img/projeto-3.jpg" alt="Preview do projeto 3" />
+      </div>
+
+      <div class="project-body">
+        <h3 class="project-title">E-commerce (em andamento)</h3>
+        <p class="project-desc">
+          Projeto em desenvolvimento com catálogo, carrinho e UI moderna com tema escuro.
+        </p>
+
+        <div class="project-tags">
+          <span class="tag">Sass</span>
+          <span class="tag">JS</span>
+          <span class="tag">API</span>
+        </div>
+
+        <div class="project-actions">
+
+          <a class="btn btn--ghost" href="#" target="_blank" rel="noreferrer">GitHub</a>
+        </div>
+      </div>
+    </article>
+  </div>
+</section>
     <script src="script.js"></script>
   </body>
 </html>
